# vdj-multiomic-integration

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: README.md  antigen-metric-nomenclature.md  control-aware-metrics.md  icy-toes-tickle.md  milab-6496-clonotype-multiomic-integration.md  release-software.md  target-cross-reactive-label.md  upgrade-sdk.md  vdj-multiomic-binding-views.md  vdj-multiomic-clonotype-identity.md  vdj-multiomic-identity-export-fix.md  vdj-multiomic-integration-initial.md  vdj-multiomic-linker-guard.md  vdj-multiomic-numerical-properties.md  vdj-multiomic-per-antigen-and-settings.md  vdj-multiomic-trace-id.md  vdj-multiomic-universal-integration.md  vdj-multiomic-v1-finalization.md  vdjmi-display-title-rename.md  vdjmi-feature-properties.md  vdjmi-subtitle-no-dots.md  vdjmi-trim-dead-plumbing.md
.github/workflows/: build.yaml  mark-stable.yaml  python-tests.yaml
block/: CHANGELOG.md  package.json
block/src/: index.ts
docs/: aggregation-contract.md  description.md
model/: CHANGELOG.md  package.json
model/src/: index.ts  types.ts
software/: conftest.py  pyproject.toml
software/aggregate-clonotypes/: CHANGELOG.md  package.json
software/aggregate-clonotypes/src/: aggregate_clonotypes.py  requirements.txt
software/aggregate-clonotypes/test/: test_aggregate.py
software/test-data/: compartment_ref.py
software/test-data/clono-synthetic/: README.md  features.csv  generate.py  linker.csv
test/: package.json
test/src/: wf.test.ts
ui/: CHANGELOG.md  package.json
ui/src/: app.ts
ui/src/pages/: AntigenCard.vue  BindingBubblePage.vue  CompositionPage.vue  DistributionPage.vue  HeatmapPage.vue  MainPage.vue
workflow/: CHANGELOG.md  package.json
workflow/src/: aggregate.tpl.tengo  csv-axes.lib.tengo  csv-axes.test.tengo  finalize.tpl.tengo  main.tpl.tengo
