# Single dev/test project for the block's python software. NOT shipped — pl-pkg builds the package
# from aggregate-clonotypes/src/requirements.txt (offline pip toolset). Runtime pins live in a PEP 735
# dependency-group named after the package; `pnpm software:reqs` compiles it to src/requirements.txt.
[project]
name = "vdj-multiomic-integration-software"
version = "0"
requires-python = ">=3.12, <3.13"
dependencies = []

[dependency-groups]
# Runtime: aggregate_clonotypes.py uses only polars + the stdlib. Keep aligned with the runenv
# wheels (@platforma-open/milaboratories.runenv-python-3:3.12.10).
aggregate-clonotypes = ["polars-lts-cpu==1.33.1"]

# Dev-only: pytest/ruff/hypothesis + numpy (the verbatim compartment_analysis.py parity reference
# uses numpy; it is NOT a runtime dep, so it stays out of requirements.txt).
dev = ["pytest>=8.3", "pytest-cov>=7.0", "ruff>=0.14", "hypothesis>=6.0", "numpy>=2.0"]

[tool.uv]
required-version = ">=0.11.16"

[tool.pytest.ini_options]
testpaths = ["aggregate-clonotypes/test"]
# test-data is on the path so the parity test can `import compartment_ref` (the verbatim reference
# copied from clonotype-distribution; ruff-excluded, not ours to lint).
pythonpath = ["aggregate-clonotypes/src", "test-data"]
addopts = "-ra --strict-markers"
markers = [
    "slow: end-to-end CLI run over the committed fixture bed; deselect with -m 'not slow'",
]

[tool.coverage.run]
source = ["aggregate-clonotypes/src"]
branch = true
patch = ["subprocess"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
exclude = [".venv", "dist", "node_modules", "build",
    "test-data"]  # committed fixtures + verbatim reference are not ours to lint/format
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
